--- a/client/src/pages/nlm/bout-planning-modal.html
+++ b/client/src/pages/nlm/bout-planning-modal.html
@@ -1,7 +1,10 @@
 <app-modal
-    title="NLM Bout Planning Modal"
+    title="HeartSteps"
     dismiss="Cancel"
     (onDismiss)="goBack()"
     >
-    Hello World NLM Bout Planning Modal
+    <h1>The sun is awesome! Can you squeeze 10 minutes of walk in the next 3 hours?</h1>
+    <p>&gt;34k people are running right now! 🏃🏃‍♀️🏃‍♂️<br/>You wanna join?</p>
+    <p><a>I love to! 💪</a></p>
+    <p><a>I'm in the middle of something. 🙀  <br/>Please bug me later.</a></p>
 </app-modal>
