Added notification-center page to home.module.ts #206
Page is now visible at /home/notification-center/
Need to incorporate logic from next heartsteps/notification-center/

NavController in NotificationCenterPage constructor gave fatal error
so I removed all Ionic wrappers from notification-center.ts (for now)

--- a/client/src/pages/notification-center/notification-center.html
+++ b/client/src/pages/notification-center/notification-center.html
@@ -5,11 +5,9 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-  <ion-navbar>
-    <ion-title>notification-center</ion-title>
-  </ion-navbar>
+    <ion-navbar>
+        <ion-title>Notification Center</ion-title>
+    </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-
-</ion-content>
+<ion-content padding> </ion-content>
