#206 Notification endpoint shows response on page
had to change location of the endpoint to:
http://localhost:8080/api/1/test/notifications_api
added dashboard.urls in heartsteps urls.py temporarily
to use heartstepsServer.get()
MUST REMOVE LATER AND CHANGE ENDPOINT LOCATION TO PUSH_MESSAGE

notifications are displayed at:
http://localhost:8100/#/home/notification-center

--- a/client/src/pages/notification-center/notification-center.html
+++ b/client/src/pages/notification-center/notification-center.html
@@ -11,3 +11,7 @@
 </ion-header>
 
 <ion-content padding> </ion-content>
+
+<h1>Hello Test</h1>
+<h3>My Notifications: {{ notifications }} DONE</h3>
+<h3>Test Var: {{ test }} DONE</h3>
