#206 Now displaying JSON contents on page
still need to:
- change endpoint URL location to push_message
- get user id through another means (not from URL parsing)
- use endpoint params instead of hardcoding URL
- make the page pretty with Ionic

--- a/client/src/pages/notification-center/notification-center.html
+++ b/client/src/pages/notification-center/notification-center.html
@@ -15,3 +15,13 @@
 <h1>Hello Test</h1>
 <h3>My Notifications: {{ notifications }} DONE</h3>
 <h3>Test Var: {{ test }} DONE</h3>
+<h3>JsonObject: {{ jsonObject }}</h3>
+
+<table>
+    <tr *ngFor="let notification of notifications">
+        <td>{{ notification.recipient }}</td>
+        <td>{{ notification.content }}</td>
+        <td>{{ notification.title }}</td>
+        <td>{{ notification.body }}</td>
+    </tr>
+</table>
