#205 Changed "Check Authorization Status" button to next

--- a/client/src/pages/onboard/fitbit-auth.page.html
+++ b/client/src/pages/onboard/fitbit-auth.page.html
@@ -7,4 +7,6 @@
     >
     Connect to Fitbit
 </button>
-<button (click)="update()">Check Fitbit Authroization</button>
+<nav>
+    <button (click)="update()">Next</button>
+</nav>
