--- a/client/src/pages/setup/fitbit-authorize.page.html
+++ b/client/src/pages/setup/fitbit-authorize.page.html
@@ -7,4 +7,4 @@
     >
     Connect to Fitbit
 </button>
-<button (click)="update()">Check Fitbit Authroization</button>
+<button (click)="update()">Next</button>
