--- a/client/src/pages/notification-center/notification-center.html
+++ b/client/src/pages/notification-center/notification-center.html
@@ -10,10 +10,43 @@
     </ion-navbar>
 </ion-header>
 
-<ion-content padding> </ion-content>
+<ion-list>
+    <ion-item>
+        <ion-label>Pokémon Yellow</ion-label>
+    </ion-item>
+    <ion-item>
+        <ion-label>Mega Man X</ion-label>
+    </ion-item>
+    <ion-item>
+        <ion-label>The Legend of Zelda</ion-label>
+    </ion-item>
+    <ion-item>
+        <ion-label>Pac-Man</ion-label>
+    </ion-item>
+    <ion-item>
+        <ion-label>Super Mario World</ion-label>
+    </ion-item>
+</ion-list>
 
-<h1>Hello Test</h1>
-<h3>My Notifications: {{ notifications }} DONE</h3>
+<!-- TODO: the first list item is cut off -->
+<ion-list>
+    <ion-item *ngFor="let notification of notifications">
+        <ion-label>{{ notification.recipient }}</ion-label>
+        <ion-label>{{ notification.content }}</ion-label>
+        <ion-label>{{ notification.title }}</ion-label>
+        <ion-label>{{ notification.body }}</ion-label>
+    </ion-item>
+</ion-list>
+<!-- <h1>Main Content</h1>
+
+<div slot="fixed">
+    <h1>Fixed Content</h1>
+</div> -->
+<!-- <ion-content padding> </ion-content> -->
+<!-- <ion-content> </ion-content> -->
+
+<!-- <h1>Hello Test</h1> -->
+<!-- <h3>My Notifications: {{ notifications }} DONE</h3> -->
 
 <table>
     <tr *ngFor="let notification of notifications">
