--- a/client/src/heartsteps/daily-summaries/daily-summary.html
+++ b/client/src/heartsteps/daily-summaries/daily-summary.html
@@ -3,3 +3,7 @@
     <li>{{miles}} <span>Miles</span></li>
     <li>{{totalMinutes}} min<span>Earned</span></li>
 </ul>
+<ul>
+    <li>{{dailyStepGoal}} <span>Daily Step Goal</span></li>
+    <li>{{dailyStepDiff}} <span>Steps to Go</span></li>
+</ul>
