--- a/client/src/pages/notification-center/notification-center.html
+++ b/client/src/pages/notification-center/notification-center.html
@@ -1,10 +1,12 @@
 <ul *ngFor="let notification of notifications">
-    <!-- TODO: first line is obstructed by navbar -->
-    <!-- go to http://localhost:8100/#/home/notification-center to reproduce bug -->
-    <li>Created: {{ notification.created }}</li>
-    <li>Recipient: {{ notification.recipient }}</li>
-    <li>Content: {{ notification.content}}</li>
-    <li>Title: {{notification.title }}</li>
-    <li>Body: {{notification.body }}</li>
-    <li></li>
+    <!-- <li>Date: {{ notification.created | date:'MM/dd/yy' }}</li> -->
+
+    <ion-item-divider>
+        <li>{{ notification.created | date:'h:mm a' }}</li>
+        <!-- <li>Recipient: {{ notification.recipient }}</li> -->
+        <!-- <li>Content: {{ notification.content}}</li> -->
+        <li><strong>{{notification.title }}</strong></li>
+        <li>{{notification.body }}</li>
+    </ion-item-divider>
+    <!-- <hr /> -->
 </ul>
