#206 Replaced bell icon w/ google material SVG

--- a/client/src/pages/home/home.html
+++ b/client/src/pages/home/home.html
@@ -4,7 +4,7 @@
         <a routerLink="notification-center"
             ><img
                 id="notification-bell"
-                src="../../assets/icon/REPLACE-notification-bell-PLACEHOLDER.png"
+                src="../../assets/icon/notifications_black_24dp.svg"
                 alt="Notification Center"
             />
         </a>
