#215 Massive overhaul to notification center
Now distinguishes between read/unread notifications
in dashboard and notification center

Updates the state of notifications to engaged
upon exiting notification center

Refactored to use existing Message model, deleted Notification model

Navigates to pages based on message.type when clicking notifications

--- a/client/src/pages/home/home.html
+++ b/client/src/pages/home/home.html
@@ -1,12 +1,21 @@
 <header>
     <h2>
         {{pageTitle}}
-        <a routerLink="notification-center"
-            ><img
-                id="notification-bell"
-                src="../../assets/icon/notifications_black_24dp.svg"
-                alt="Notification Center"
-            />
+        <a routerLink="notification-center">
+            <ng-container *ngIf="haveUnread === false">
+                <img
+                    class="notification-bell"
+                    src="../../assets/icon/notifications_black_24dp.svg"
+                    alt="Notification Center"
+                />
+            </ng-container>
+            <ng-container *ngIf="haveUnread === true">
+                <img
+                    class="notification-bell"
+                    src="../../assets/icon/notifications_active_black_24dp.svg"
+                    alt="Notification Center"
+                />
+            </ng-container>
         </a>
     </h2>
     <span *ngIf="updatingParticipant" class="loading">
