--- a/client/src/pages/home/notification-center.html
+++ b/client/src/pages/home/notification-center.html
@@ -1,5 +1,32 @@
+<div><h2>Unread Status: {{ haveUnread }}</h2></div>
 <div *ngFor="let notification of notifications">
+    <ul class="notification">
+        <a role="button" (click)="redirect(notification)">
+            <li class="notification-list-item time-list-item">
+                {{ notification.created | date:'h:mm a' }}
+            </li>
+            <li class="notification-list-item">
+                <strong>{{notification.title }}</strong>
+            </li>
+            <li class="notification-list-item">{{notification.body }}</li>
+            <!-- <li class="notification-list-item">{{notification.sent }}</li> -->
+            <!-- <li class="notification-list-item">{{notification.received }}</li> -->
+            <!-- <li class="notification-list-item">{{notification.opened }}</li> -->
+            <li *ngIf="notification.engaged" class="notification-list-item">
+                ENGAGED
+            </li>
+            <li *ngIf="notification.opened" class="notification-list-item">
+                OPENED
+            </li>
+            <li class="notification-list-item">{{notification.id }}</li>
+        </a>
+    </ul>
+</div>
+
+<!-- <div *ngFor="let notification of notifications">
     <ng-container *ngIf="isReceived(notification)">
+        {{message}}
+        <button (click)="newMessage()">New Message</button>
         <ng-container *ngIf="isRead(notification) === true">
             <ul class="notification">
                 <li class="notification-list-item time-list-item">
@@ -17,6 +44,7 @@
                 <li class="notification-list-item">
                     {{notification.engaged }}
                 </li>
+                <li class="notification-list-item">{{notification.id }}</li>
             </ul>
         </ng-container>
         <ng-container *ngIf="isRead(notification) === false">
@@ -36,7 +64,8 @@
                 <li class="notification-list-item">
                     {{notification.engaged }}
                 </li>
+                <li class="notification-list-item">{{notification.id }}</li>
             </ul>
         </ng-container>
     </ng-container>
-</div>
+</div> -->
