#149 Added fitbit clock face to onboarding sequence

--- a/client/src/pages/settings/fitbit-clock-face-pin.page.html
+++ b/client/src/pages/settings/fitbit-clock-face-pin.page.html
@@ -2,27 +2,26 @@
     title="Fitbit Clock Face Pin"
     (onDismiss)="goBack()"
     >
-    <section>
-        <button (click)="openFitbitGallery()">Install Fitbit Clock Face</button>
-    </section>
-    <div *ngIf="pin">
-        <p>Pair with clock face with pin <strong>{{pin}}.</strong></p>
+    <button (click)="openFitbitGallery()">Install Fitbit Clock Face</button>
+    <heartsteps-fitbit-clock-face-pair *ngIf="!pin"
+        (paired)="submitForm()"
+        >
+    </heartsteps-fitbit-clock-face-pair>
+    <section *ngIf="pin">
+        <p>Paired with clock face with pin <strong>{{pin}}.</strong></p>
         <ul *ngIf="stepCounts">
             <li *ngFor="let stepCount of stepCounts">
                 {{stepCount.steps}} steps {{stepCount.time}}
             </li>
         </ul>
-    </div>
-    <app-form *ngIf="!pin"
-        [formGroup]="form"
-        submitLabel="Pair Clock Face"
-        (onSubmit)="submitForm()"
-        >
-        <p>Enter the pin from your watch face below</p>
-        <app-text-field
-            label="Enter pin"
-            formControlName="pin"
+        <button (click)="getLastStepCounts()"
             >
-        </app-text-field>
-    </app-form>
+            Update status
+        </button>
+    </section>
+    <button *ngIf="pin" class="danger"
+        (click)="deletePin()"
+        >
+        Unpair Clock Face
+    </button>
 </app-modal>
