--- a/client/src/pages/home/notification-center.html
+++ b/client/src/pages/home/notification-center.html
@@ -18,12 +18,10 @@
 </ng-template>
 
 <!-- TODO: REMOVE IN PRODUCTION, ONLY FOR DEBUGGING PURPOSES -->
-<div *ngIf="featureFlags.notification_center_flag">
-    <h6>UUID: {{ featureFlags.uuid }}</h6>
-    <h6>
-        Notification Center Flag: {{ featureFlags.notification_center_flag }}
-    </h6>
-</div>
+<!-- <div *ngIf="notificationCenterFlag()"> -->
+<h6>UUID: {{ featureFlags.uuid }}</h6>
+<h6>Notification Center Flag: {{ notificationCenterFlag() }}</h6>
+<!-- </div> -->
 
 <div *ngFor="let notification of notifications">
     <ng-container *ngIf="isReceived(notification)">
