#241 Feature flags can now be added
addFeatureFlag(flag: string) is now in feature-flags Angular service
checking for duplicate flags and other logic is done in Django
uses same REST endpoint using POST request

--- a/client/src/pages/home/notification-center.html
+++ b/client/src/pages/home/notification-center.html
@@ -20,6 +20,9 @@
 <!-- TODO: REMOVE IN PRODUCTION, ONLY FOR DEBUGGING PURPOSES -->
 <h6>UUID: {{ featureFlags.uuid }}</h6>
 <h6>Notification Center Flag: {{ notificationCenterFlag() }}</h6>
+<button (click)="this.featureFlagService.addFeatureFlag('flag_direct')">
+    Update Feature Flags
+</button>
 
 <div *ngFor="let notification of notifications">
     <ng-container *ngIf="isReceived(notification)">
