#241 Feature flags can now be removed
Uses the same POST REST API as adding flags

--- a/client/src/pages/home/notification-center.html
+++ b/client/src/pages/home/notification-center.html
@@ -20,7 +20,9 @@
 <!-- TODO: REMOVE IN PRODUCTION, ONLY FOR DEBUGGING PURPOSES -->
 <h6>UUID: {{ featureFlags.uuid }}</h6>
 <h6>Notification Center Flag: {{ notificationCenterFlag() }}</h6>
-<button (click)="this.featureFlagService.addFeatureFlag('flag_direct')">
+<button
+    (click)="this.featureFlagService.removeFeatureFlag('new_flag_from_angular')"
+>
     Update Feature Flags
 </button>
 
