#243 Reformatted TS files with Prettier

--- a/client/src/pages/morning-survey/start.page.html
+++ b/client/src/pages/morning-survey/start.page.html
@@ -1,6 +1,4 @@
-<heartsteps-weather [date]="today">
-    Today
-</heartsteps-weather>
+<heartsteps-weather [date]="today"> Today </heartsteps-weather>
 <div class="headline">
     <p>{{message}}</p>
 </div>
