--- a/client/src/pages/user-logs/user-logs.page.html
+++ b/client/src/pages/user-logs/user-logs.page.html
@@ -1,11 +1,36 @@
-<app-page
-    title="HeartSteps"
-    >
+<app-page title="HeartSteps">
     <section>
         <p>
             Below are the user logs for the current user.
             Current actions being logged:
         </p>
+
+        <table class="table table-striped table-dark table-hover table-sm">
+            <thead>
+                <td style="width: 30pt;">Timestamp</td>
+                <td style="width: 10pt;">Status</td>
+                <td style="width: auto;">Action</td>
+            </thead>
+            <tbody>
+<!--                <tr style="min-height: 25px; height: 25px;">-->
+<!--                    <td>{{ log.timestamp }}</td>-->
+<!--                    <td>{{ log.status }}</td>-->
+<!--                    <td>{{ log.action }}</td>-->
+<!--                </tr>-->
+                <tr style="min-height: 25px; height: 25px;">
+                    <td>Hi</td>
+                    <td>Hi</td>
+                    <td>Hi</td>
+<!--                    <td>{{ log.timestamp }}</td>-->
+<!--                    <td>{{ log.status }}</td>-->
+<!--                    <td>{{ log.action }}</td>-->
+<!--                        <td> {{ test }}</td>-->
+                </tr>
+            </tbody>
+        </table>
+
+
+
     </section>
     <button class="settings"
         (click)="goToSettings()"
