#273 rendering first item from user logs in client view

--- a/client/src/pages/user-logs/user-logs.page.html
+++ b/client/src/pages/user-logs/user-logs.page.html
@@ -18,13 +18,9 @@
 <!--                    <td>{{ log.action }}</td>-->
 <!--                </tr>-->
                 <tr style="min-height: 25px; height: 25px;">
-                    <td>Hi</td>
-                    <td>Hi</td>
-                    <td>Hi</td>
-<!--                    <td>{{ log.timestamp }}</td>-->
-<!--                    <td>{{ log.status }}</td>-->
-<!--                    <td>{{ log.action }}</td>-->
-<!--                        <td> {{ test }}</td>-->
+                    <td>{{ serializeduserlogs[0].timestamp }}</td>
+                    <td>{{ serializeduserlogs[0].status }}</td>
+                    <td>{{ serializeduserlogs[0].action }}</td>
                 </tr>
             </tbody>
         </table>
